--- a/meta-openpli/recipes-openpli/enigma2-softcams/enigma2-plugin-softcams-oscam/oscam.conf
+++ b/meta-openpli/recipes-openpli/enigma2-softcams/enigma2-plugin-softcams-oscam/oscam.conf
@@ -1,25 +1,34 @@
 [global]
-disablelog				= 1
-disableuserfile				= 1
-usrfileflag				= 0
-maxlogsize				= 10
-preferlocalcards			= 1
-saveinithistory 			= 1
-lb_mode					= 0
-unlock_parental				= 1
+logfile                       = /var/log/oscam.log
+nice                          = -1
+preferlocalcards              = 1
 
-[cs378x]
-port                          = 12005
+[cache]
 
-[webif]
-httpport				= 8081
-httpallowed				= 10.0.0.0-10.255.255.255,172.16.0.0-172.31.255.255,192.168.0.0-192.168.255.255,127.0.0.1
+[streamrelay]
+stream_relay_enabled          = 0
 
 [dvbapi]
-enabled					= 1
-pmt_mode				= 6
-au					= 1
-user					= dvbapiau
-boxtype					= dreambox
+enabled                       = 1
+au                            = 1
+pmt_mode                      = 0
+request_mode                  = 1
+delayer                       = 60
+ecminfo_type                  = 1
+user                          = enigma2
+read_sdt                      = 1
+write_sdt_prov                = 1
+extended_cw_api               = 2
+boxtype                       = dreambox
 
-
+[webif]
+httpport                      = 8888
+httptpl                       = /etc/tuxbox/config/tpl/
+httprefresh                   = 30
+httpshowmeminfo               = 1
+httpshowuserinfo              = 1
+httpshowcacheexinfo           = 1
+httpshowecminfo               = 1
+httpshowloadinfo              = 1
+httpallowed                   = 192.168.0.0-255.255.255.255,127.0.0.1
+http_status_log               = 1
